add_executable(new_target 128-longest-consecutive-sequence/Solution.cpp
        main.cpp
        1-two-sum/Solution.cpp
        0-template-problem/Solution.cpp
        3-longest-substring-without-repeating-characters/Solution.cpp
        5-longest-palindromic-substring/Solution.cpp
        133-clone-graph/Solution.cpp
        647-palindromic-substrings/Solution.cpp
        11-container-with-most-water/Solution.cpp
)